pine_script_references/v5/categories/variables.md
# Variables

## Variables

- `bar_index`
- `close`
- `dayofmonth`
- `dayofweek`
- `high`
- `hl2`
- `hlc3`
- `hlcc4`
- `hour`
- `last_bar_index`
- `last_bar_time`
- `low`
- `minute`
- `month`
- `na`
- `ohlc4`
- `open`
- `second`
- `time`
- `time_close`
- `time_tradingday`
- `timenow`
- `volume`
- `weekofyear`
- `year`

## Properties

- `barstate.isconfirmed`
- `barstate.isfirst`
- `barstate.ishistory`
- `barstate.islast`
- `barstate.islastconfirmedhistory`
- `barstate.isnew`
- `barstate.isrealtime`
- `box.all`
- `chart.bg_color`
- `chart.fg_color`
- `chart.is_heikinashi`
- `chart.is_kagi`
- `chart.is_linebreak`
- `chart.is_pnf`
- `chart.is_range`
- `chart.is_renko`
- `chart.is_standard`
- `chart.left_visible_bar_time`
- `chart.right_visible_bar_time`
- `dividends.future_amount`
- `dividends.future_ex_date`
- `dividends.future_pay_date`
- `earnings.future_eps`
- `earnings.future_period_end_time`
- `earnings.future_revenue`
- `earnings.future_time`
- `label.all`
- `line.all`
- `linefill.all`
- `polyline.all`
- `session.isfirstbar`
- `session.isfirstbar_regular`
- `session.islastbar`
- `session.islastbar_regular`
- `session.ismarket`
- `session.ispostmarket`
- `session.ispremarket`
- `strategy.account_currency`
- `strategy.avg_losing_trade`
- `strategy.avg_losing_trade_percent`
- `strategy.avg_trade`
- `strategy.avg_trade_percent`
- `strategy.avg_winning_trade`
- `strategy.avg_winning_trade_percent`
- `strategy.closedtrades`
- `strategy.equity`
- `strategy.eventrades`
- `strategy.grossloss`
- `strategy.grossloss_percent`
- `strategy.grossprofit`
- `strategy.grossprofit_percent`
- `strategy.initial_capital`
- `strategy.losstrades`
- `strategy.margin_liquidation_price`
- `strategy.max_contracts_held_all`
- `strategy.max_contracts_held_long`
- `strategy.max_contracts_held_short`
- `strategy.max_drawdown`
- `strategy.max_drawdown_percent`
- `strategy.max_runup`
- `strategy.max_runup_percent`
- `strategy.netprofit`
- `strategy.netprofit_percent`
- `strategy.openprofit`
- `strategy.openprofit_percent`
- `strategy.opentrades`
- `strategy.opentrades.capital_held`
- `strategy.position_avg_price`
- `strategy.position_entry_name`
- `strategy.position_size`
- `strategy.wintrades`
- `syminfo.basecurrency`
- `syminfo.country`
- `syminfo.currency`
- `syminfo.description`
- `syminfo.employees`
- `syminfo.expiration_date`
- `syminfo.industry`
- `syminfo.minmove`
- `syminfo.mintick`
- `syminfo.pointvalue`
- `syminfo.prefix`
- `syminfo.pricescale`
- `syminfo.recommendations_buy`
- `syminfo.recommendations_buy_strong`
- `syminfo.recommendations_date`
- `syminfo.recommendations_hold`
- `syminfo.recommendations_sell`
- `syminfo.recommendations_sell_strong`
- `syminfo.recommendations_total`
- `syminfo.root`
- `syminfo.sector`
- `syminfo.session`
- `syminfo.shareholders`
- `syminfo.shares_outstanding_float`
- `syminfo.shares_outstanding_total`
- `syminfo.target_price_average`
- `syminfo.target_price_date`
- `syminfo.target_price_estimates`
- `syminfo.target_price_high`
- `syminfo.target_price_low`
- `syminfo.target_price_median`
- `syminfo.ticker`
- `syminfo.tickerid`
- `syminfo.timezone`
- `syminfo.type`
- `syminfo.volumetype`
- `ta.accdist`
- `ta.iii`
- `ta.nvi`
- `ta.obv`
- `ta.pvi`
- `ta.pvt`
- `ta.tr`
- `ta.vwap`
- `ta.wad`
- `ta.wvad`
- `table.all`
- `timeframe.isdaily`
- `timeframe.isdwm`
- `timeframe.isintraday`
- `timeframe.isminutes`
- `timeframe.ismonthly`
- `timeframe.isseconds`
- `timeframe.isticks`
- `timeframe.isweekly`
- `timeframe.multiplier`
- `timeframe.period`

